# chessC-

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  build.ninja  cmake_install.cmake  myGame
.cmake/api/v1/reply/: cache-v2-47df7b2d63de9e51d85a.json  cache-v2-bf0e7d2cd8585b1a1a33.json  cmakeFiles-v1-3ac19eefb248e618821f.json  cmakeFiles-v1-f8114153ef7d4e55992c.json  codemodel-v2-dc1ee8ec8c0369336246.json  directory-libs.raylib.raylib-Debug-acf3b31fce453d14ad04.json  index-2023-08-21T06-07-20-0376.json  index-2023-08-21T19-55-18-0160.json  target-ChessC-Debug-e124d34896e358673ddc.json  target-glfw-Debug-75dc0b2618a353adbb6f.json  target-raylib-Debug-4a4e83344f04133dca89.json  target-update_mappings-Debug-a42d76db42752548833b.json  toolchains-v1-92471590e85256b9583d.json
assets/: resize.py
cmake-debug-build/: ChessC
cmake-debug-build/libs/raylib/: CTestTestfile.cmake
cmake-debug-build/libs/raylib/raylib/: CTestTestfile.cmake
include/: main.h
src/: CMakeLists.txt  Makefile  board.cpp  board.h  cmake_install.cmake  main.cpp  mainmenu.cpp  mainmenu.h  pieces.cpp  pieces.h  settings.cpp  settings.h  setup.cpp  setup.h
src/Board/: Board.cpp  Board.h  ViewBoard.cpp  ViewBoard.h
src/Board/Board/: Board.cpp  Board.h
src/Board/GameLoop/: GameLoop.cpp  GameLoop.h
src/Board/Move/: Move.cpp  Move.h
src/Board/MoveGenerator/: MoveGenerator.cpp  MoveGenerator.h
src/Board/Pieces/: Pieces.cpp  Pieces.h
src/Board/Setup/: Setup.cpp  Setup.h  Setup.s
src/Board/Types/: Types.h
src/Render/: Renderer.cpp  Renderer.h
